--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
+/* Fonte - import */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
 /* Zerando o css*/
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
+
 
 #cor_texto{
     color: white;
@@ -12,120 +18,123 @@
 
 /* header */
   
-.a{
+.a {
     color: #fff;
     text-decoration: none;
     transition: 0.3s;
-    font-size: 15px;
-}
+    font-size: 14px;
+  }
   
-.a:hover{
+  .a:hover {
     opacity: 0.7;
-}
+    color: #e91e63;
+  }
   
-.logo{
+  .logo {
     color: #fff;
     text-decoration: none;
     transition: 0.3s;
     font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 4px;
-}
-  
-.logo:hover{
-    opacity: 0.7;
-}
+  }
 
-nav{
+  .logo:hover{
+    opacity: 0.7;
+    color: #e91e63;
+  }
+  
+  nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-    background: #2e2e2e;
-    height: 8vh;
-}
+    background: #181818;
+    height: 10vh;
+  }
   
-main{
-    background: url("../img/header.jpg") no-repeat center center;
+  main {
+    background: url("../img/header2.jpg") no-repeat center center;
     background-size: cover;
     height: 92vh;
-}
+  }
   
-.nav-list{
+  .nav-list {
     list-style: none;
     display: flex;
-}
+    margin-top: 1%;
+  }
   
-.nav-list li{
+  .nav-list li {
     letter-spacing: 3px;
     margin-left: 32px;
-}
+  }
   
-.mobile-menu{
+  .mobile-menu {
     display: none;
     cursor: pointer;
-}
+  }
   
-.mobile-menu div{
+  .mobile-menu div {
     width: 32px;
     height: 2px;
     background: #fff;
     margin: 8px;
     transition: 0.3s;
-}
+  }
   
-@media (max-width: 999px){
-    body{
+  @media (max-width: 999px) {
+    body {
       overflow-x: hidden;
     }
-    .nav-list{
+    .nav-list {
       position: absolute;
       top: 8vh;
       right: 0;
-      width: 35vw;
+      width: 50vw;
       height: 92vh;
-      background: #2e2e2e;
+      background: #181818;
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
       transform: translateX(100%);
       transition: transform 0.3s ease-in;
     }
-    .nav-list li{
+    .nav-list li {
       margin-left: 0;
       opacity: 0;
     }
-    .mobile-menu{
+    .mobile-menu {
       display: block;
     }
-}
+  }
   
-.nav-list.active{
+  .nav-list.active {
     transform: translateX(0);
-}
+  }
   
-@keyframes navLinkFade{
-    from{
+  @keyframes navLinkFade {
+    from {
       opacity: 0;
       transform: translateX(50px);
     }
-    to{
+    to {
       opacity: 1;
       transform: translateX(0);
     }
-}
+  }
   
-  .mobile-menu.active .line1{
+  .mobile-menu.active .line1 {
     transform: rotate(-45deg) translate(-8px, 8px);
-}
+  }
   
-  .mobile-menu.active .line2{
+  .mobile-menu.active .line2 {
     opacity: 0;
-}
+  }
   
-  .mobile-menu.active .line3{
+  .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
-}
+  }
 
 /* inicio do site */
 
@@ -134,16 +143,12 @@ main{
     width: 428px;
 }
 
-#card_text{
-    width: 65rem; 
-    margin-left: 25px;
-}
 
 #card_curso{
     width: 28rem; 
 }
 
-.container-curso{
+.container-slider{
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -187,7 +192,7 @@ main{
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: #4070F4;
+    background-color: #181818;
     border-radius: 25px 25px 0 25px;
 }
 
@@ -199,7 +204,7 @@ main{
     bottom: -40px;
     height: 40px;
     width: 40px;
-    background-color: #4070F4;
+    background-color: #181818;
 }
 
 .overlay::after{
@@ -221,7 +226,7 @@ main{
     width: 100%;
     object-fit: cover;
     border-radius: 50%;
-    border: 4px solid #4070F4;
+    border: 4px solid #505050;
 }
 
 .name{
@@ -232,17 +237,17 @@ main{
 
 .description{
     font-size: 14px;
-    color: #707070;
+    color: #505050;
     text-align: center;
 }
   
 .swiper-navBtn{
-    color: #6E93f7;
+    color: #505050;
     transition: color 0.3s ease;
 }
 
   .swiper-navBtn:hover{
-    color: #4070F4;
+    color: #181818;
 }
 
   .swiper-navBtn::before,
@@ -259,12 +264,12 @@ main{
 }
 
 .swiper-pagination-bullet{
-    background-color: #6E93f7;
-    opacity: 1;
+    background-color: #505050;
+    opacity: 2;
 }
 
   .swiper-pagination-bullet-active{
-    background-color: #4070F4;
+    background-color: #181818;
 }
   
 @media screen and (max-width: 768px) {
@@ -279,4 +284,35 @@ main{
 .img_aluno{
     width: 500px;
     height: 500px;
+}
+
+.img_mercado{
+    width: 500px;
+    height: 275px;
+}
+
+.depoimento_video{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 0;
+    opacity: 0.3;
+}
+
+#icones{
+    margin-right: 75px;
+    margin-bottom: 7px;
+}
+
+#informa{
+    margin-left: 75px;
+}
+
+#icone_footer{
+    color: #181818;
 }
