--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     font-family: 'Lato', sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* header */
   
 .a {
@@ -88,7 +92,7 @@
     }
     .nav-list {
       position: absolute;
-      top: 10vh;
+      top: 8vh;
       right: 0;
       width: 50vw;
       height: 100vh;
@@ -154,6 +158,8 @@
 #card_curso{
     width: 28rem; 
 }
+
+/* slider */
 
 .container-slider{
     min-height: 100vh;
@@ -253,6 +259,21 @@
     transition: color 0.3s ease;
 }
 
+.button{
+  border: none;
+  font-size: 16px;
+  color: #FFF;
+  padding: 8px 16px;
+  background-color: #4070F4;
+  border-radius: 6px;
+  margin: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button:hover{
+  background: #265DF2;
+}
+
   .swiper-navBtn:hover{
     color: #181818;
 }
@@ -287,6 +308,8 @@
       display: none;
     }
 }
+
+/* acabou o slider */
 
 #aluno_img .img_aluno{
     height: 100%;
