--- a/css/style.css
+++ b/css/style.css
@@ -21,123 +21,50 @@ body {
 
 /* header */
   
-.a {
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 14px;
-  }
+nav{
+  height: 59px;
+  background: #181818;
+  z-index: 2;
+}
+.navbar-brand{
+  font-family: 'Lato';
+}
+.btn-close{
+  background-color: #FFFFFF;
+}
+nav ul{
+  justify-content: space-between !important;
+}
+nav ul li a{
+  font-weight: bold !important;
+  font-size: 16px !important;
+  line-height: 60px;
+  letter-spacing: 0.5px;
+  transition: 0.5s !important;
+}
+nav ul li a::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  background-color:#e91e63;
+  margin: auto;
+  display: block;
+}
+nav ul li a:hover::after{
+  width: 100%;
+  transition: width 0.5s ease;
+  margin-top: -5px;
+}
+nav ul li a:hover{
+  font-size: 18px !important;
+  color: #fff;
+}
   
-  .a:hover {
-    opacity: 0.7;
-    color: #e91e63;
-  }
-  
-  .logo {
-    color: #fff;
-    text-decoration: none;
-    transition: 0.3s;
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-  }
-
-  .logo:hover{
-    opacity: 0.7;
-    color: #e91e63;
-  }
-  
-  .nav_bar{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-    background: #181818;
-    height: 10vh;
-  }
-  
-  main{
-    background: url("../img/header2.jpg") no-repeat center center;
-    background-size: cover;
-    height: 100vh;
-  }
-  
-  .nav-list {
-    list-style: none;
-    display: flex;
-    margin-top: 1%;
-  }
-  
-  .nav-list li {
-    letter-spacing: 3px;
-    margin-left: 32px;
-  }
-  
-  .mobile-menu {
-    display: none;
-    cursor: pointer;
-  }
-  
-  .mobile-menu div {
-    width: 32px;
-    height: 2px;
-    background: #fff;
-    margin: 8px;
-    transition: 0.3s;
-  }
-  
-  @media (max-width: 999px) {
-    body {
-      overflow-x: hidden;
-    }
-    .nav-list {
-      position: absolute;
-      top: 8vh;
-      right: 0;
-      width: 50vw;
-      height: 100vh;
-      background: #181818;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      transform: translateX(100%);
-      transition: transform 0.3s ease-in;
-    }
-    .nav-list li {
-      margin-left: 0;
-      opacity: 0;
-    }
-    .mobile-menu {
-      display: block;
-    }
-  }
-  
-  .nav-list.active {
-    transform: translateX(0);
-  }
-  
-  @keyframes navLinkFade {
-    from {
-      opacity: 0;
-      transform: translateX(50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-  
-  .mobile-menu.active .line1 {
-    transform: rotate(-45deg) translate(-8px, 8px);
-  }
-  
-  .mobile-menu.active .line2 {
-    opacity: 0;
-  }
-  
-  .mobile-menu.active .line3 {
-    transform: rotate(45deg) translate(-5px, -7px);
-  }
+main{
+  background: url("../img/header2.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh;
+}
 
 /* inicio do site */
 
@@ -152,11 +79,6 @@ body {
     width: 100%;
     object-fit: cover;
     border-radius: 5%;
-}
-
-
-#card_curso{
-    width: 28rem; 
 }
 
 /* slider */
@@ -341,15 +263,6 @@ body {
     transform: translateX(-50%) translateY(-50%);
     z-index: 0;
     opacity: 0.3;
-}
-
-#icones{
-    margin-right: 75px;
-    margin-bottom: 7px;
-}
-
-#informa{
-    margin-left: 75px;
 }
 
 #icone_footer{
