--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ main{
 .container-slider{
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -171,7 +171,7 @@ main{
 }
 
 .description{
-    font-size: 14px;
+    font-size: 17px;
     color: #505050;
     text-align: center;
 }
