--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ main{
 /* inicio do site */
 
 #perfil_img{
-    height: 500px;
-    width: 550px;
+    height: 400px;
+    width: 575px;
     background: #FFF;
 }
 
@@ -93,7 +93,7 @@ main{
 /* slider */
 
 .container-slider{
-    min-height: 100vh;
+    min-height: 70vh;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -242,6 +242,12 @@ main{
 
 /* acabou o slider */
 
+#aluno_img{
+  height: 450px;
+  width: 500px;
+  background: #FFF;
+}
+
 #aluno_img .img_aluno{
     height: 100%;
     width: 100%;
@@ -249,7 +255,7 @@ main{
 }
 
 #mercado_img{
-    height: 475px;
+    height: 425px;
     width: 570px;
     background: #FFF;
 }
