--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,13 @@ body {
 /* header */
   
 nav{
-  height: 59px;
-  background: #181818;
+  height: 70px;
+  background: #101010;
   z-index: 2;
 }
 .navbar-brand{
   font-family: 'Lato';
+  margin-left: 25px;
 }
 .btn-close{
   background-color: #FFFFFF;
