--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,16 @@ body {
 
 #text-tilt{
   font-size: 40px;
+  border-left: #e91e63 6px solid;
+  border-radius: 10px;
+  padding-left: 5px;
 }
 
 #text-subtilt{
-  font-size: 30px;
+  font-size: 27px;
+  border-left: #2e2e2e 5px solid;
+  border-radius: 10px;
+  padding-left: 5px;
 }
 
 #perfil{
@@ -118,22 +124,22 @@ main{
 }
 
 .tilt-main{
-  margin-top: 275px;
+  margin-top: 225px;
   color: white;
-  font-size: 29px;
+  font-size: 55px;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+}
+
+.subtilt-main{
+  margin-top: -20px;
+  color: white;
+  font-size: 35px;
   text-align: center;
   font-family: 'Lato', sans-serif;
 }
 
 /* inicio do site */
-
-#tilt-comoe{
-  font-size: 25px;
-}
-
-#faculdades{
-  padding-top: 75px;
-}
 
 #perfil_img{
     height: 400px;
