versão tentando fazer xml

--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,11 @@ body {
   padding-top: 50px;
 }
 
-#depoimento{
-  padding-top: 50px;
+#entrevista{
+  padding-top: 125px;
 }
 
-#noticia{
+#blog{
   padding-top: 50px;
 }
 
